welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: ')' expected but '(' found.
def paintLine(colors:Array[Color](getWolrdHeight())) {
                                 ^Array2:19: error: '=' expected but ')' found.
def paintLine(colors:Array[Color](getWolrdHeight())) {
                                                   ^Array2:40: error: illegal start of simple expression
}
^